1.3.34 (2022031300)
- tweaked appearance of cards
- fixed issue with review mode
- added selection of term/definition for listen-and-choose

1.3.33 (2022022700)
- fixed issue in get_course_moduleinfo that could kill backup and restore
- tweaked polly stuff
- added freemode and mywords

1.3.22 (Build 2022022300)
- Fixed issue which prevented more than 40 results showing in the reports

1.3.21 (Build 2022021500)
- Added Journey mode (setting only)

1.3.20 (Build 2022020800)
- Added open and close dates (Kuldeep Banga)

1.3.19 (Build 2022020500)
- Added (beta) word wizard

1.3.18 (Build 2022012000)
- Fixed issue with incorrect name/id for Korean Polly voice Seoyeon
- Stopped review mode from pulling items from current mod

1.3.17 (Build 2021122200)
- added credential fetching

1.3.16 (Build 2021120200)
- Improved navigation between steps
- Added Cancel attempt ability (fails on the very first attempt)
- Added a button to add terms to first view of activity with no terms
- Added a score to the finished attempt page
- Added highest-scoring-attempt and latest-attempt options to grading
- Added datatables to reports page so that its easier to work with when have large numbers of students

1.3.15 (Build 2021112100)
- Fixed browser speech recognition on Safari

1.3.14 (Build 2021110500)
- Fixed grading bug where steps with none specified as activity type could be counted in grade
- Added ability to use Poodll STT exclusively
- Added a re push grades button to reports page

1.3.13 (Build 2021090700)
- Fixed bug "too few arguments" in speech cards introduced in 1.3.12

1.3.12 (Build 2021083100)
- Added ability to hide image on flip cards screen
- Added ability to set front and back face of flip cards

1.3.11 (Build 2021081600)
- issue with php 8 and array key exists

1.3.10 (Build 2021053100)
- Intername flag for iframe

1.3.9 (Build 2021052900)
- Added lang models for FR and ES

1.3.8 (Build 2021052500)
- Added ability to view reports by group

1.3.7 Build (2021052000)