@@ -77,6 +77,11 @@ const M_LANG_TAIN ='ta-IN';
 const M_LANG_TEIN ='te-IN';
 const M_LANG_TRTR ='tr-TR';
 
+const M_LANG_NBNO ='nb-NO';
+const M_LANG_PLPL ='pl-PL';
+const M_LANG_RORO ='ro-RO';
+const M_LANG_SVSE ='sv-SE';
+
 const TRANSCRIBER_NONE = 0;
 const TRANSCRIBER_AUTO = 1;
 const TRANSCRIBER_POODLL = 2;
