@@ -707,7 +707,12 @@ class utils{
           //constants::M_LANG_TAIN => [],
           //constants::M_LANG_TEIN => [],
               constants::M_LANG_TRTR => ['Filiz'=>'Filiz'],
-              constants::M_LANG_ZHCN => ['Zhiyu']
+              constants::M_LANG_ZHCN => ['Zhiyu'],
+
+              constants::M_LANG_NBNO => ['Liv'=>'Liv'],
+              constants::M_LANG_PLPL => ['Ewa'=>'Ewa','Maja'=>'Maja','Jacek'=>'Jacek','Jan'=>'Jan'],
+              constants::M_LANG_RORO => ['Carmen'=>'Carmen'],
+              constants::M_LANG_SVSE => ['Astrid'=>'Astrid']
       );
       if(array_key_exists($langcode,$alllang)&& !$showall) {
           return $alllang[$langcode];
@@ -943,7 +948,12 @@ class utils{
                constants::M_LANG_TAIN => get_string('ta-in', constants::M_COMPONENT),
                constants::M_LANG_TEIN => get_string('te-in', constants::M_COMPONENT),
                constants::M_LANG_TRTR => get_string('tr-tr', constants::M_COMPONENT),
-               constants::M_LANG_ZHCN => get_string('zh-cn', constants::M_COMPONENT)
+               constants::M_LANG_ZHCN => get_string('zh-cn', constants::M_COMPONENT),
+
+           constants::M_LANG_NBNO => get_string('nb-no', constants::M_COMPONENT),
+           constants::M_LANG_PLPL => get_string('pl-pl', constants::M_COMPONENT),
+           constants::M_LANG_RORO => get_string('ro-ro', constants::M_COMPONENT),
+           constants::M_LANG_SVSE => get_string('sv-se', constants::M_COMPONENT)
        );
    }
 
