@@ -2,6 +2,7 @@
 - tweaked appearance of cards
 - fixed issue with review mode
 - added selection of term/definition for listen-and-choose
+- added Norwegian, Romanian, Polish and Swedish
 
 1.3.33 (2022022700)
 - fixed issue in get_course_moduleinfo that could kill backup and restore
